# VRCX-But-In-Rust

./: Cargo.toml  LICENCE  README.md  packager.toml
.github/workflows/: package.yml
assets/icons/: vrcx-bir-volume.icns  vrcx-bir.icns
docs/: distribution.md
locales/: en.yml  fr.yml
scripts/: set-dmg-volume-icon.sh
src/: main.rs
src/api/: auth.rs  avatars.rs  calendar.rs  economy.rs  favorites.rs  files.rs  friends.rs  groups.rs  instances.rs  inventory.rs  invites.rs  jams.rs  mod.rs  moderation.rs  notifications.rs  prints.rs  props.rs  system.rs  users.rs  worlds.rs
src/backend/: mod.rs  service.rs
src/client/: config.rs  mod.rs  request.rs
src/error/: mod.rs
src/models/: mod.rs  response.rs
src/models/Common/: media.rs
src/models/auth/: account.rs  mod.rs  payload.rs
src/models/avatar/: asset.rs  avatar.rs  economy.rs  identity.rs  media.rs  mod.rs  performance.rs  product_listing.rs  publication.rs  styles.rs  unity_package.rs
src/models/calendar/: event.rs  mod.rs  payload.rs
src/models/common/: default_content_settings.rs  mod.rs  pagination.rs  platform.rs
src/models/economy/: account.rs  balance.rs  license.rs  mod.rs  payload.rs  product.rs  store.rs  subscription.rs  transaction.rs
src/models/favorite/: favorite.rs  group.rs  limits.rs  mod.rs  payload.rs
src/models/file/: analysis.rs  file.rs  mod.rs  payload.rs  upload.rs
src/models/friend/: friend.rs  mod.rs  payload.rs
src/models/group/: announcement.rs  audit.rs  gallery.rs  group.rs  instance.rs  list.rs  member.rs  mod.rs  payload.rs  permission.rs  post.rs  role.rs  tags.rs  transfer.rs
src/models/impostor/: impostor.rs  mod.rs
src/models/instance/: capacity.rs  flags.rs  identity.rs  instance.rs  mod.rs  privacy.rs  region.rs
src/models/inventory/: collection.rs  drop.rs  inventory.rs  item.rs  mod.rs  payload.rs  template.rs
src/models/invite/: invite.rs  mod.rs
src/models/jam/: jam.rs  mod.rs  submission.rs
src/models/moderation/: mod.rs  moderation.rs  payload.rs  report.rs
src/models/note/: mod.rs  note.rs  payload.rs
src/models/notification/: legacy.rs  mod.rs  notification.rs  payload.rs
src/models/permission/: mod.rs  permission.rs
src/models/persistence/: mod.rs  persistence.rs
src/models/prints/: mod.rs  payload.rs  print.rs
src/models/props/: mod.rs  payload.rs  prop.rs  publication.rs  unity_package.rs
src/models/system/: agreement.rs  config.rs  health.rs  mod.rs
src/models/users/: badges.rs  feedback.rs  identity.rs  metadata.rs  mod.rs  presence.rs  profile.rs  social.rs  tags.rs  user.rs
src/models/world/: capacity.rs  content.rs  identity.rs  media.rs  mod.rs  publication.rs  stats.rs  tags.rs  world.rs
src/screen_overlay/: config.rs  mod.rs
src/session/: auth.rs  credentials.rs  mod.rs  tokens.rs
src/store/: cache.rs  mod.rs  reducer.rs  state.rs
src/ui/: mod.rs
src/vr_overlay/: config.rs  mod.rs  notification.rs  wrist.rs
src/vr_overlay/wrist/: openvr_runtime.rs  openxr_runtime.rs
src/websocket/: event.rs  mod.rs
