[package]
name = "vrcx-but-in-rust"
version = "0.1.0"
edition = "2024"
authors = ["DrapNard"]
license = "MIT"
description = "A native, lightweight, cross-platform VRChat companion app written in Rust."
homepage = "https://github.com/DrapNard/VRCX-But-In-Rust"
repository = "https://github.com/DrapNard/VRCX-But-In-Rust"
readme = "README.md"
keywords = ["vrchat", "desktop", "iced", "companion"]
categories = ["gui"]

[features]
default = []
# VR support is deliberately opt-in: a normal build contains none of this module.
vr-overlay = []
vr-notifications-xs = ["vr-overlay"]
vr-notifications-ovr-toolkit = ["vr-overlay"]
vr-wrist = ["vr-overlay"]
vr-wrist-steamvr = ["vr-wrist", "dep:openvr"]
vr-wrist-wayvr = ["vr-wrist", "dep:openxr"]
# Convenient complete build profiles. Platform cfgs still remove unsupported runtimes.
vr-windows = ["vr-notifications-xs", "vr-notifications-ovr-toolkit", "vr-wrist-steamvr"]
vr-linux = ["vr-windows", "vr-wrist-wayvr"]

[dependencies]
futures-util = "0.3.32"
iced = { version = "0.14", features = ["tokio", "image"] }
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
url = "2.5.8"
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1"
keyring = "4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
moka = { version = "0.12", features = ["future"] }
redb = "4"
base64 = "0.22.1"
urlencoding = "2.1.3"
rust-i18n = "4.1.0"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
openvr = { version = "0.9.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
openxr = { version = "0.21.1", optional = true }
